# bird-identifier

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  start-backend.ps1
.codex/environments/: environment.toml
backend/: README.md  requirements.txt
backend/app/: main.py  schemas.py  service.py  species_glossary.py
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  error.rs  main.rs  metadata.rs  model.rs  recognizer.rs
src/lib/: birdVision.ts  markdown.ts  recognitionApi.ts  tauri.ts
