[package]
name = "bird-identify-tool"
version = "0.1.0"
description = "Bird identification and metadata search tool"
authors = ["Codex"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
kamadak-exif = "0.6.1"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tauri = { version = "2.2.5", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.2.0"
tauri-plugin-fs = "2.2.0"
tauri-plugin-opener = "2.2.0"
thiserror = "2.0.9"
walkdir = "2.5.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
